[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RTModel"
description = "RTModel is a tool for microlensing event interpretation."
version = "2.0"
keywords = ['Microlensing analysis and fitting']
authors = [
    { name = "Valerio Bozza", email = "valboz@sa.infn.it" },
]
license = { text = "GPL-3.0" }
requires-python = ">=3.6,<4"
readme = "README.md"
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy",
    "pytest",
    "matplotlib", 
    "tqdm",
    "VBBinaryLensing>=3.7.0"
]

[project.urls]
Homepage = "https://github.com/valboz/RTModel"


[tool.setuptools.package-data]
"RTModel.data" = ["data/*"]
