[build-system]
requires = ["scikit-build-core>=0.10","VBMicrolensing>=4.1"]
build-backend = "scikit_build_core.build"

[project]
name = "RTModel"
description = "RTModel is a tool for microlensing event interpretation."
version = "2.4.1"
keywords = ['Microlensing analysis and fitting']
authors = [
    { name = "Valerio Bozza", email = "valboz@sa.infn.it" },
]
license = { text = "GPL-3.0" }
requires-python = ">=3.7,<4"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy",
    "pytest",
    "matplotlib", 
    "tqdm",
    "tabulate",
    "VBMicrolensing>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/valboz/RTModel"

[tool.scikit-build]
build-dir = "build"
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build-verbosity = "3"

[tool.setuptools.package-data]
"RTModel.data" = ["data/*"]
